# pomo-backend-rs

./: .gitignore  Cargo.toml  deploy.py
domain/: Cargo.toml
domain/src/: model.rs  repository.rs
domain/src/model/: entity.rs  value.rs
domain/src/model/entity/: calendar.rs  task.rs  task_list.rs  user.rs
domain/src/model/value/: app_state.rs  calendar_id.rs  client_info.rs  code.rs  event.rs  user_config.rs  user_id.rs
infrastructure/: .gitignore  Cargo.toml
infrastructure/src/: dynamo_db_repository.rs  lib.rs
infrastructure/src/dynamo_db_repository/: presentation.rs
infrastructure/src/dynamo_db_repository/domain/model/: interface.rs  value.rs
infrastructure/src/reqwest_google_repository/: presentation.rs  usecase.rs
infrastructure/src/reqwest_google_repository/domain/model/: entity.rs
infrastructure/src/reqwest_google_repository/usecase/: fetch_calendar_usecase.rs  fetch_gmail_address_usecase.rs  fetch_task_list_usecase.rs  fetch_task_usecase.rs  fetch_token_usecase.rs  push_event_usecase.rs
infrastructure/src/sled_db_repository/: presentation.rs
infrastructure/src/sled_db_repository/domain/model/: interface.rs
infrastructure/src/sled_db_repository/domain/model/interface/: sled_io.rs
infrastructure/src/sled_db_repository/domain/model/value/: user_table.rs
infrastructure/tests/: db_repository_test.rs
presentation/: Cargo.toml
presentation/src/: actix_server.rs  domain.rs  lambda_server.rs  lib.rs
presentation/src/actix_server/: endpoint.rs  server.rs  success_response.rs
presentation/src/actix_server/endpoint/: fetch_calendar.rs  fetch_task.rs  fetch_task_list.rs  fetch_user_config.rs  login.rs  push_event.rs  update_user_config.rs
presentation/src/lambda_server/: endpoint.rs  lambda_error.rs  log_response.rs  parse_body.rs
presentation/src/lambda_server/endpoint/: extract_id.rs  fetch_calendar.rs  fetch_task.rs  fetch_task_list.rs  fetch_user_config.rs  login.rs  push_event.rs  update_user_config.rs
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
runner/src/lambda/: fetch_calendar.rs  fetch_task.rs  fetch_task_list.rs  fetch_user_config.rs  login.rs  push_event.rs  update_user_config.rs
src/: lib.rs  main.rs  presentation.rs  usecase.rs
src/domain/: repository.rs
src/domain/model/: entity.rs  value.rs
src/domain/model/entity/: calendar.rs  task_list.rs  user.rs
src/domain/model/value/: app_state.rs  calendar_id.rs  code.rs  gmail_address.rs  task_list_id.rs  token.rs  user_config.rs  user_id.rs
src/infrastructure/: repository.rs  reqwest_google_repository.rs  sled_db_repository.rs
src/infrastructure/dynamo_db_repository/: presentation.rs
src/infrastructure/dynamo_db_repository/domain/model/: interface.rs  value.rs
src/infrastructure/repository/: reqwest_google_repository.rs
src/infrastructure/repository/reqwest_google_repository/: presentation.rs
src/infrastructure/repository/reqwest_google_repository/domain/: service.rs
src/infrastructure/repository/reqwest_google_repository/domain/model/: entity.rs
src/infrastructure/repository/reqwest_google_repository/usecase/: fetch_gmail_address_usecase.rs  fetch_task_usecase.rs  fetch_token_usecase.rs
src/infrastructure/repository/sled_db_repository/domain/model/: value.rs
src/infrastructure/reqwest_google_repository/: presentation.rs  usecase.rs
src/infrastructure/reqwest_google_repository/domain/model/: entity.rs
src/infrastructure/reqwest_google_repository/usecase/: fetch_calendar_usecase.rs  fetch_task_list_usecase.rs  fetch_task_usecase.rs  push_event_usecase.rs
src/infrastructure/sled_db_repository/: presentation.rs
src/infrastructure/sled_db_repository/domain/: model.rs
src/infrastructure/sled_db_repository/domain/model/interface/: sled_io.rs
src/infrastructure/sled_db_repository/domain/model/value/: user_table.rs
src/presentation/: endpoint.rs  server.rs
src/presentation/endpoint/: fetch_calendar.rs  fetch_task.rs  fetch_task_list.rs  fetch_user_config.rs  id_header.rs  login.rs  push_event.rs  update_user_config.rs
src/usecase/: fetch_calendar_id_usecase.rs  fetch_calendar_usecase.rs  fetch_task_list_usecase.rs  fetch_task_usecase.rs  fetch_user_config_usecase.rs  login.rs  login_usecase.rs  push_event_usecase.rs  update_user_config_usecase.rs
tests/: db_repository_test.rs
usecase/: Cargo.toml
usecase/src/: fetch_calendar_usecase.rs  fetch_task_list_usecase.rs  fetch_task_usecase.rs  fetch_user_config_usecase.rs  lib.rs  login_usecase.rs  push_event_usecase.rs  update_user_config_usecase.rs
