[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
hyper-rustls = "^0.22"
reqwest = "*"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7.0"
yup-oauth2 = "^6.0"
chrono = "*"
sled = "*"
sha2 = "0.10"
actix-cors = "0.6.0-beta.8"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1.52"

[dependencies.actix-web]
version = "4.0.0-rc.2"

[dependencies.futures-util]
default-features = false
version = "0.3.7"

[dev-dependencies]
speculate = "*"
rstest = "*"