[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
sled = "*"
sha2 = "0.10"
actix-cors = "0.6.0-beta.1"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1.52"
actix-web = "4.0.0-rc.2"
futures-util = "0.3.21"
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
actix-rt = "2.6.0"