[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sled = { version = "0.34.7", features = ["testing"]}
async-trait = "0.1.52"
actix-web = "4.0.0-rc.2"
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"

[dev-dependencies]
rstest = "0.12.0"
actix-rt = "2.6.0"
