[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
usecase = { path = "../usecase" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6.0-beta.1"
env_logger = "0.9"
actix-web = "4.0.0-rc.2"
futures-util = "0.3.21"
lambda_runtime = "0.5"
lambda_http = "0.5"
log = "0.4.14"
