[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
presentation = { path = "../presentation" }
infrastructure = { path = "../infrastructure" }
actix-web = "4.0.0-rc.2"

[[bin]]
name = "actix_server"
path = "src/actix_server.rs"